# cc-vec

./: .env.example  .gitignore  .pre-commit-config.yaml  ATHENA_SETUP_GUIDE.md  LICENSE  RAG_USAGE.md  README.md  claude_desktop_config.json  pyproject.toml  rag_agent.md
docs/: CUSTOM_EMBEDDINGS.md
examples/: README.md  STREAMLIT_README.md  cc_vec_complete_rag_workflow.py  cc_vec_rag_example.py  gradio_rag_chatbot.py  rag_demo.py  streamlit_rag_chatbot.py
src/cc_vec/: __init__.py  api.py  rag_agent.py
src/cc_vec/cli/: __init__.py  filter_options.py  main.py
src/cc_vec/core/: __init__.py  cc_athena_client.py  s3_client.py  text_processor.py
src/cc_vec/lib/: __init__.py  delete_vector_store.py  fetch.py  index.py  list_crawls.py  list_vector_stores.py  query.py  search.py  stats.py
src/cc_vec/mcp/: __init__.py  filter_utils.py  http_server.py  server.py
src/cc_vec/mcp/handlers/: __init__.py  base.py  cc_fetch.py  cc_index.py  cc_list_crawls.py  cc_list_vector_stores.py  cc_query.py  cc_search.py  cc_stats.py
src/cc_vec/types/: __init__.py  athena_config.py  config.py  logging_config.py  main_config.py  models.py  openai_config.py  types.py
tests/: test_mcp.py
