[project]
name = "cc-vec"
version = "0.1.0"
description = "Common Crawl Vectorizer - Pipeline for converting Common Crawl data to vector stores"
readme = "README.md"
authors = [
    { name = "Raghotham Murthy", email = "rsm@meta.com" }
]
requires-python = ">=3.12"
dependencies = [
    "openai>=1.107.0",
    "pydantic>=2.0.0",
    "requests>=2.32.5",
    "mcp>=1.0.0",
    "boto3>=1.35.0",
    "click>=8.0.0",
    "pyyaml>=6.0.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "llama-stack-client>=0.0.53",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
cc-vec = "cc_vec.cli.main:main"

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=6.3.0",
    "responses>=0.25.8",
]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "integration: marks tests as integration tests that require network/API access",
    "slow: marks tests as slow running (may download large files)",
    "unit: marks tests as fast unit tests (default)",
]
# By default, skip integration tests unless explicitly requested
addopts = "-m 'not integration'"

[tool.mypy]
python_version = "3.12"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
disallow_any_generics = false
check_untyped_defs = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = false
warn_no_return = true
follow_imports = "silent"
ignore_missing_imports = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true

# Only check for import errors and basic issues
# This will catch circular imports and missing modules
# without requiring full type annotations
[[tool.mypy.overrides]]
module = "cc_vec.*"
follow_imports = "normal"
check_untyped_defs = true

# More lenient for tests
[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true
